// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CurrentUser Default 1`] = `
<div
  className="bg-blue-500 text-white w-12 h-12 text-xl rounded-full flex items-center justify-center font-medium tracking-wide"
>
  <span>
    BL
  </span>
</div>
`;

exports[`Storyshots ShoppingList Cant Delete 1`] = `
<article
  className="flex items-center justify-between w-full h-16 px-3 overflow-hidden bg-gray-300 rounded-lg dark:text-gray-900"
  onPanEnd={[Function]}
>
  <div>
    <div
      layout="position"
    >
      <h2
        className="text-xl font-bold leading-none"
      >
        Pasta Run
      </h2>
      <span
        animate={
          Object {
            "opacity": 1,
          }
        }
        className="text-sm font-light leading-none text-gray-600"
      >
        modified
         
        <time
          dateTime="2020-07-31T17:21:08.064864+00:00"
        >
          4 days ago
        </time>
      </span>
    </div>
  </div>
  <div
    className="flex items-center h-full"
  >
    <div
      animate={
        Object {
          "opacity": 1,
          "x": 0,
        }
      }
      className="flex items-center -space-x-2"
      initial={
        Object {
          "opacity": 0,
          "x": "-100%",
        }
      }
      transition={
        Object {
          "damping": 200,
          "stiffness": 3000,
          "type": "spring",
        }
      }
    >
      <div
        className="bg-green-500 text-lg text-white w-9 h-9 shadow-solid rounded-full flex items-center justify-center font-medium tracking-wide"
      >
        <span>
          BL
        </span>
      </div>
      <div
        className="bg-red-500 text-lg text-white w-9 h-9 shadow-solid rounded-full flex items-center justify-center font-medium tracking-wide"
      >
        <span>
          CC
        </span>
      </div>
      <div
        className="bg-purple-500 text-lg text-white w-9 h-9 shadow-solid rounded-full flex items-center justify-center font-medium tracking-wide"
      >
        <span>
          SC
        </span>
      </div>
      <div
        className="bg-orange-500 text-lg text-white w-9 h-9 shadow-solid rounded-full flex items-center justify-center font-medium tracking-wide"
      >
        <span>
          JS
        </span>
      </div>
    </div>
    <button
      layout={true}
      onClick={[Function]}
      transition={
        Object {
          "damping": 200,
          "stiffness": 3000,
          "type": "spring",
        }
      }
    >
      <svg
        className="w-6 h-6 text-gray-400"
        fill="currentColor"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</article>
`;

exports[`Storyshots ShoppingList Default 1`] = `
<article
  className="flex items-center justify-between w-full h-16 px-3 overflow-hidden bg-gray-300 rounded-lg dark:text-gray-900"
  onPanEnd={[Function]}
>
  <div>
    <div
      layout="position"
    >
      <h2
        className="text-xl font-bold leading-none"
      >
        Pasta Run
      </h2>
      <span
        animate={
          Object {
            "opacity": 1,
          }
        }
        className="text-sm font-light leading-none text-gray-600"
      >
        modified
         
        <time
          dateTime="2020-07-31T17:21:08.064864+00:00"
        >
          4 days ago
        </time>
      </span>
    </div>
  </div>
  <div
    className="flex items-center h-full"
  >
    <div
      animate={
        Object {
          "opacity": 1,
          "x": 0,
        }
      }
      className="flex items-center -space-x-2"
      initial={
        Object {
          "opacity": 0,
          "x": "-100%",
        }
      }
      transition={
        Object {
          "damping": 200,
          "stiffness": 3000,
          "type": "spring",
        }
      }
    >
      <div
        className="bg-green-500 text-lg text-white w-9 h-9 shadow-solid rounded-full flex items-center justify-center font-medium tracking-wide"
      >
        <span>
          BL
        </span>
      </div>
      <div
        className="bg-red-500 text-lg text-white w-9 h-9 shadow-solid rounded-full flex items-center justify-center font-medium tracking-wide"
      >
        <span>
          CC
        </span>
      </div>
      <div
        className="bg-purple-500 text-lg text-white w-9 h-9 shadow-solid rounded-full flex items-center justify-center font-medium tracking-wide"
      >
        <span>
          SC
        </span>
      </div>
      <div
        className="bg-orange-500 text-lg text-white w-9 h-9 shadow-solid rounded-full flex items-center justify-center font-medium tracking-wide"
      >
        <span>
          JS
        </span>
      </div>
    </div>
    <button
      layout={true}
      onClick={[Function]}
      transition={
        Object {
          "damping": 200,
          "stiffness": 3000,
          "type": "spring",
        }
      }
    >
      <svg
        className="w-6 h-6 text-gray-400"
        fill="currentColor"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</article>
`;

exports[`Storyshots ShoppingList Newly Created 1`] = `
<article
  className="flex items-center justify-between w-full h-16 px-3 overflow-hidden bg-gray-300 rounded-lg dark:text-gray-900"
  onPanEnd={[Function]}
>
  <div>
    <form
      onBlur={[Function]}
      onSubmit={[Function]}
    >
      <input
        autoFocus={true}
        className="w-full text-xl font-bold leading-none form-input"
        onChange={[Function]}
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    className="flex items-center h-full"
  >
    <button
      layout={true}
      onClick={[Function]}
      transition={
        Object {
          "damping": 200,
          "stiffness": 3000,
          "type": "spring",
        }
      }
    >
      <svg
        className="w-6 h-6 text-gray-400"
        fill="currentColor"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
          fillRule="evenodd"
        />
      </svg>
    </button>
    <div
      animate={
        Object {
          "opacity": 1,
          "x": 0,
        }
      }
      className="flex items-center h-full -mr-3"
      initial={
        Object {
          "opacity": 0,
          "x": "100%",
        }
      }
      transition={
        Object {
          "x": Object {
            "damping": 200,
            "stiffness": 3000,
            "type": "spring",
          },
        }
      }
    >
      <button
        className="h-full"
        onClick={[Function]}
      >
        <div
          className="opacity-50 cursor-not-allowed flex items-center justify-center h-full px-2 font-semibold text-white bg-gray-600 w-18"
        >
          Save
        </div>
      </button>
      <button
        className="h-full"
        onClick={[Function]}
      >
        <div
          className="flex items-center justify-center h-full px-2 font-semibold text-white bg-red-600 w-18"
        >
          Delete
        </div>
      </button>
    </div>
  </div>
</article>
`;

exports[`Storyshots ShoppingListsHeader Default 1`] = `
<header>
  <nav
    className="flex items-center justify-center"
  >
    <div
      className="flex items-center justify-start flex-1 w-0 mr-auto"
    >
      <svg
        className="w-8 h-8"
        fill="currentColor"
        viewBox="0 0 20 20"
      >
        <path
          clipRule="evenodd"
          d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <h1
      className="text-3xl font-bold "
    >
      Brian's Lists
    </h1>
    <div
      className="flex items-center justify-end flex-1 w-0 ml-auto"
    >
      <div
        className=""
        style={
          Object {
            "display": "inline",
          }
        }
      >
        <div
          className="bg-blue-500 text-white w-12 h-12 text-xl rounded-full flex items-center justify-center font-medium tracking-wide"
        >
          <span>
            BL
          </span>
        </div>
      </div>
    </div>
  </nav>
</header>
`;
